private-dormitory/force-app/main/default/objects/Contact/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>Enter the name of the person we should contact in case of an emergency.</description>
    <label>Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>