private-dormitory/force-app/main/default/objects/Contact/fields/Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Phone__c</fullName>
    <description>Enter the Phone number of the person we should contact in case of an emergency.</description>
    <label>Emergency Phone</label>
    <type>Phone</type>
</CustomField>