private-dormitory/force-app/main/default/objects/Contact/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The room of residence.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Residents</relationshipLabel>
    <relationshipName>Residents</relationshipName>
    <type>Lookup</type>
</CustomField>