private-dormitory/force-app/main/default/objects/Contact/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <description>The number of Student ID</description>
    <label>Student ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>